# deloreans

./: .dockerignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml  test_coverage.yml
delorean/: __init__.py  api.py  app.py  date_range.py  date_utils.py
delorean/date_utils/: __init__.py  common.py  date_granularity.py  date_range.py  offset_granularity.py  span_granularity.py
deloreans/: __init__.py  api.py  app.py  exceptions.py
deloreans/date_utils/: __init__.py  common.py  date_granularity.py  date_range.py  offset_granularity.py
tests/: happypath.py
tests/unittest/: test_app.py  test_date_range.py  test_date_utils.py
tests/unittest/date_utils/: test_common.py  test_date_granularity.py  test_date_range.py  test_offset_granularity.py  test_span_granularity.py
