[tool.poetry]
name = "deloreans"
version = "0.1.0"
description = "Provide compared date range according to your scenario"
authors = ["usharerose <ushareroses@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"
ipython = "7.34.0"
mypy = "1.4.1"
pytest = "7.4.4"
pytest-cov = "4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
